09-sample-app-react-and-nodejs/kubernetes/overlays/local/client-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app.kubernetes.io/instance: client-local
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: client-local
    spec:
      containers:
      - name: client
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
